Fix for categories sort on mobile.

--- a/moxie.css
+++ b/moxie.css
@@ -669,7 +669,6 @@ h2 {
 }
 
 ul.categories_list {
-	border:1px solid #ccc;
 	margin:0;
 	padding:0;
 	list-style-type: none;
@@ -679,7 +678,6 @@ ul.categories_list, li.categories_list{
 	display: block;
 	margin: 5px;
 	padding: 5px;
-	border: 1px solid #CCC;
 	background: #fff;
 }
 span.categories_list {
@@ -687,3 +685,7 @@ span.categories_list {
 	padding-left: 20px;
 	width: 100px;
 }
+
+#categories_list { list-style-type: none; margin: 0; padding: 0; width: 100%; }
+#categories_list li { margin: 2px 3px 3px 2px; padding: 0.35em; padding-left: 1em; height: 2em; border: 1px #bbbbbb solid; border-radius: 5px; font-size: 20px;}
+#categories_list li span { position: relative; vertical-align: middle; }
